@@ -894,7 +894,7 @@ class StyleSheetList:
         try:
             p = make_parser()
             p.setContentHandler(SheetParser(self))
-            p.parse('file://' + self.file)
+            p.parse(self.file)
         except (IOError,OSError,SAXParseException):
             pass
         
